--- a/restapi/src/main/resources/application.properties
+++ b/restapi/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://10.10.10.179:5432/uat_centraldashboard
+spring.datasource.username=centraldashboard
+spring.datasource.password=C3ntra120!$
 
+server.port=8080
