--- a/restapi/pom.xml
+++ b/restapi/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.5.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
